--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       # befor install build docker image
-      - run: docker build -t gokulcs4u/react-multi-test -f ./client/Dockerfile.dev ./client
+      - run: docker build -t gokulcs4u/react-multi-test -f ../github/../client/Dockerfile.dev ./client
 
       # run test scripts
       - run: docker run -e CI=true gokulcs4u/react-multi-test npm run test -- --coverage
@@ -33,17 +33,17 @@ jobs:
       - run: docker push gokulcs4u/multi-server
       - run: docker push gokulcs4u/multi-worker
 
-      # generate deployment package
-      - name: Generate deployment package
-        run: zip -r deploy.zip . -x '*.git*'
+      # # generate deployment package
+      # - name: Generate deployment package
+      #   run: zip -r deploy.zip . -x '*.git*'
 
-      - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v18
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          region: ap-south-1
-          application_name: Docker-React
-          environment_name: Docker-react-env
-          existing_bucket_name: elasticbeanstalk-ap-south-1-092737449886
-          version_label: 12346
+      # - name: Deploy to EB
+      #   uses: einaregilsson/beanstalk-deploy@v18
+      #   with:
+      #     aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+      #     aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+      #     region: ap-south-1
+      #     application_name: Docker-React
+      #     environment_name: Docker-react-env
+      #     existing_bucket_name: elasticbeanstalk-ap-south-1-092737449886
+      #     version_label: 12346
